--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <style>
         
         body{
-            background-color: red;
+            background-image: url(4472066811b950fa3da65c8d8ae35622.jpg);
+            width:100vw;
+            height: auto;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
     
         #ball{
