--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@
         }
     
         #treeContainer .tree{
-            width: 600px;
+            width: 500px;
             height: auto;
+            margin-top: 19vh;
+            margin-left: 5vw;
         }
     
     </style>
